# guard-eval-harness

./: .env.example  .gitignore  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  OSS_REDESIGN.md  README.md  gen_configs.py  index.html  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
assets/: demo.tape
cli/reference/: index.html
configs/: claude-haiku-4.5.yaml  gemma4-31b-it.yaml  gpt-4o-mini.yaml  gpt-5.4-mini.yaml  granite-guardian-3.1-8b.yaml  granite-guardian-3.2-5b.yaml  llama-guard-2.yaml  llama-guard-3-1b.yaml  llama-guard-3-8b.yaml  llama-prompt-guard-22m.yaml  md-judge.yaml  prompt-guard-86m.yaml  qwen3guard-0.6b.yaml  qwen3guard-4b.yaml  shieldgemma-9b.yaml  toxicchat-t5.yaml  wildguard.yaml
datasets/image/: index.html
datasets/local/: index.html
datasets/overview/: index.html
datasets/text/: index.html
developer/adding-datasets/: index.html
developer/adding-models/: index.html
developer/architecture/: index.html
developer/plugins-and-presets/: index.html
docs/: index.md  vibecoding.md
docs/backends/: overview.md
docs/cli/: reference.md
docs/datasets/: audio.md  code.md  image.md  local.md  overview.md  text.md
docs/developer/: adding-backends.md  adding-datasets.md  adding-guards.md  adding-models.md  architecture.md  plugins-and-presets.md
docs/getting-started/: installation.md  quickstart.md  run-modes.md  troubleshooting.md
docs/guards/: overview.md
docs/metrics/: overview.md
docs/models/: anthropic.md  http.md  huggingface.md  openai-compatible.md  openai-moderation.md  overview.md  vllm.md
docs/stylesheets/: extra.css
docs/user-guide/: benchmark-packs.md  benchmark-selection.md  common-workflows.md  configuration.md  resume.md  run-artifacts.md
examples/: full-config.yaml  hf-text-classifier.yaml  llama-guard-vllm.yaml  llavaguard-local-image-jsonl.yaml  local-audio-jsonl.yaml  mock-jsonl.yaml  openai-compatible-local-image-jsonl.yaml  openai-judge.yaml  openai-moderation-safe-vs-unsafe-image-edits.yaml  profile-multi-dataset.yaml  run-hf-mock-jsonl.yaml  run-mock-csv.yaml  run-mock-jsonl-auto-resume.yaml  run-mock-jsonl.yaml  run-openai-mock-jsonl.yaml  run-vllm-llama-guard.yaml  shieldgemma2-local-image-dir.yaml
examples/code-vuln/: run-vulnllm-r-openai.yaml
examples/datasets/: audio_samples.jsonl  local_images.jsonl  mock_samples.csv  mock_samples.jsonl
examples/datasets/local_directory/: metadata.json  test.jsonl
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/run-modes/: index.html
getting-started/troubleshooting/: index.html
metrics/overview/: index.html
models/anthropic/: index.html
models/http/: index.html
models/huggingface/: index.html
models/openai-compatible/: index.html
models/openai-moderation/: index.html
models/overview/: index.html
models/vllm/: index.html
search/: search_index.json
src/guard_eval_harness/: __init__.py  __main__.py  cli.py  judgment.py  metrics.py  output_formats.py  policies.py  registry.py  runner.py  schemas.py
src/guard_eval_harness/backends/: __init__.py  base.py  hf_generate.py  hf_image_classifier.py  hf_text_classifier.py  hf_vlm.py  mock.py  openai_compat.py
src/guard_eval_harness/benchmarks/: __init__.py  packs.py  presets.py
src/guard_eval_harness/cli/: __init__.py  main.py
src/guard_eval_harness/config/: __init__.py  loading.py  models.py  schema.py
src/guard_eval_harness/datasets/: __init__.py  aart.py  advbench_behaviors.py  advbench_strings.py  aegis_ai_content_safety_dataset_2.py  agent_harm.py  ai_vs_real.py  anthropic_hh_rlhf.py  base.py  beaver_tails_330k.py  bot_adversarial_dialogue.py  cat_qa.py  circleguardbench_public.py  civil_comments.py  convabuse.py  decodingtrust_stereotypes.py  dices_350.py  dices_990.py  do_anything_now_questions.py  do_not_answer.py  dynahate.py  ethos.py  guardrailsai_jailbreak.py  harm_eval.py  harmbench_behaviors.py  harmful_q.py  harmful_qa.py  harmful_qa_questions.py  hate_speech_offensive.py  hatecheck.py  hateful_memes.py  hatemoji_check.py  hatexplain.py  hex_phi.py  holisafe_bench.py  i_cona.py  i_controversial.py  i_malicious_instructions.py  i_physical_safety.py  image_base.py  (+51 more)
src/guard_eval_harness/execution/: __init__.py  artifacts.py  (+1 more)
tests/: __init__.py  _vibe_conformance.py  test_benchmark_presets.py  test_classifier_guards.py  test_cli.py  test_cli_commands.py  test_code_vuln_datasets.py  test_config.py  test_datasets_base.py  test_datasets_builtin.py  test_datasets_holisafe_bench.py  test_datasets_image.py  test_datasets_image_phase2.py  test_datasets_imagenet1k.py  test_datasets_local.py  test_datasets_local_audio_jsonl.py  test_datasets_local_csv.py  test_datasets_local_image_phase4.py  test_datasets_local_jsonl.py  test_datasets_nemotron_content_safety_audio.py  test_datasets_nemotron_content_safety_text.py  test_datasets_phase4.py  test_datasets_source_backed.py  test_exports_summary.py  test_media_cache.py  test_metrics.py  test_metrics_binary.py  test_model_catalog.py  test_models_anthropic.py  test_models_guardreasoner_vl.py  test_models_hf_audio_guard.py  test_models_hf_image_classifier.py  test_models_hf_safeqwen_vlm.py  test_models_hf_shieldgemma2.py  test_models_hf_vlm_guard.py  test_models_http.py  test_models_huggingface.py  test_models_llama_guard.py  test_models_nemotron_safety.py  test_models_omni_moderation_image.py  (+35 more)
user-guide/benchmark-packs/: index.html
user-guide/benchmark-selection/: index.html
user-guide/common-workflows/: index.html
user-guide/configuration/: index.html
user-guide/resume/: index.html
user-guide/run-artifacts/: index.html
vibecoding/: index.html
(+172 files in other folders)
