[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guard-eval-harness"
version = "0.1.0"
description = "Lightweight harness for evaluating safety guards"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Guard Eval Harness Maintainers" }]
dependencies = [
  "datasets>=2.18",
  "httpx>=0.27",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
# Local HF inference (chat-LLM guards, image-classifier guards, VLM guards).
hf = [
  "accelerate>=0.30",
  "Pillow>=10.3",
  "sentencepiece>=0.2",
  "torch>=2.6.0",
  # >=4.50 clears the CVE-2024-11392/11393/11394 buffer-overflow trio
  # (fixed in 4.46) plus ReDoS / input-validation advisories
  # (CVE-2024-12720, CVE-2025-1194) that cluster in 4.46-4.49.
  "transformers>=4.50",
]
# Hosted endpoints (OpenAI, vLLM OpenAI-compatible server, LiteLLM, …).
api = [
  "tenacity>=8.2",
]
dev = [
  "build>=1.2",
  "pytest>=8.2",
  "ruff>=0.4",
]

[project.scripts]
geh = "guard_eval_harness.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["guard_eval_harness*"]

[tool.ruff]
line-length = 80
