[build-system]
requires = ["setuptools>=69", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "geh"
# Version is derived from the git tag at build time by setuptools_scm.
# A tag of `vX.Y.Z` produces wheel version `X.Y.Z`. Configure below in
# [tool.setuptools_scm]. Untagged dev builds get `X.Y.Z.devN+gSHA`.
dynamic = ["version"]
description = "CLI-first harness for safety and guardrail evaluation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Guard Eval Harness Maintainers" }]
dependencies = [
  "datasets>=2.18",
  "httpx>=0.27",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/Virtue-Research/guard-eval-harness"
Repository = "https://github.com/Virtue-Research/guard-eval-harness"
Documentation = "https://github.com/Virtue-Research/guard-eval-harness#readme"

[project.optional-dependencies]
hf = [
  "accelerate>=0.30",
  "Pillow>=10.3",
  "sentencepiece>=0.2",
  "torch>=2.6.0",
  # >=4.50 clears the CVE-2024-11392/11393/11394 buffer-overflow trio
  # (fixed in 4.46) plus ReDoS / input-validation advisories
  # (CVE-2024-12720, CVE-2025-1194) that cluster in 4.46-4.49.
  "transformers>=4.50",
]
vllm = [
  # vLLM pins its own torch version (e.g. 0.17.x requires torch==2.10).
  # Do NOT pin torch here — let vLLM's dependency resolver handle it.
  # Note: vLLM 0.18.0 has a torch.compile bug (pytorch#176562) that
  # breaks CUDA graph capture; pin <0.18 until a fixed release ships.
  "vllm>=0.14.1,<0.18",
  # See note above on the hf extra — bumped to clear CVE-2024-11392/11393/11394
  # and the ReDoS / validation advisories in 4.46-4.49.
  "transformers>=4.50",
]
api = [
  "tenacity>=8.2",
]
report = [
  "jinja2>=3.1.6",
  "pandas>=2.2",
]
sheets = [
  "google-auth>=2.29",
  "gspread>=6.1",
]
dev = [
  "build>=1.2",
  "pytest>=8.2",
  "ruff>=0.4",
]
# VibeCoding Safety Bench (v0) is stdlib + pydantic only; it shells out to
# upstream secure-coding benchmarks rather than importing them. Reserved as
# an explicit extra so callers can opt in without pulling heavy deps.
vibecoding = []

[project.scripts]
geh = "guard_eval_harness.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["guard_eval_harness*"]

[tool.setuptools.package-data]
"guard_eval_harness.models" = ["catalog/*.yaml"]
"guard_eval_harness.vibecoding" = ["catalog/*.yaml"]

[tool.setuptools_scm]
# Fallback when building outside a git checkout (e.g. installs from an sdist
# that didn't include a version stamp). Real releases get their version from
# the git tag and override this.
fallback_version = "0.0.0"

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
markers = [
    "vibe_smoke: requires Docker/venv/disk; opt-in via GEH_VIBE_SMOKE=1",
]
